[UPDATE] agreagar la seccion de propiedades

--- a/index.html
+++ b/index.html
@@ -44,5 +44,101 @@
       </div>
     </div>
   </header>
+
+  <main class="main">
+    <div class="main__container">
+      <section class="propiedades">
+        <h2 class="propiedades__titulo">Nuestras <span>Propiedades</span></h2>
+
+        <div class="propiedades__grid">
+          <div class="propiedades__propiedad">
+            <div class="propiedades__imagen">
+              <h3 class="propiedades__nombre">Casa de Lujo con 3 Cuartos</h3>
+            </div>
+            <div class="propiedades__contenido">
+              <p class="propiedades__texto">Esta moderna casa cuenta con diseño vanguardista, acabados de alta calidad y
+                tecnología domótica. Espacios amplios y
+                luminosos, cocina equipada, jardín y terraza.
+              </p>
+              <p class="propiedades__precio">$1,200,000.00</p>
+              <a class="propiedades__enlace" href="#">Ver Propiedad</a>
+            </div>
+          </div>
+
+          <div class="propiedades__propiedad">
+            <div class="propiedades__imagen">
+              <h3 class="propiedades__nombre">Casa de Lujo con 3 Cuartos</h3>
+            </div>
+            <div class="propiedades__contenido">
+              <p class="propiedades__texto">Exclusiva residencia en zona privilegiada, con
+                seguridad privada 24/7. Incluye piscina climatizada, sala de juegos,
+                garage para cuatro vehículos y suite principal.
+              </p>
+              <p class="propiedades__precio">$1,200,000.00</p>
+              <a class="propiedades__enlace" href="#">Ver Propiedad</a>
+            </div>
+          </div>
+
+          <div class="propiedades__propiedad">
+            <div class="propiedades__imagen">
+              <h3 class="propiedades__nombre">Casa de Lujo con 3 Cuartos</h3>
+            </div>
+            <div class="propiedades__contenido">
+              <p class="propiedades__texto">Lujosa propiedad con vista al mar, cuenta con acceso directo a la playa.
+                Espacios abiertos, decoración minimalista,
+                cuatro baños completos y sonido y diseño integrado.
+              </p>
+              <p class="propiedades__precio">$1,200,000.00</p>
+              <a class="propiedades__enlace" href="#">Ver Propiedad</a>
+            </div>
+          </div>
+
+          <div class="propiedades__propiedad">
+            <div class="propiedades__imagen">
+              <h3 class="propiedades__nombre">Casa de Lujo con 3 Cuartos</h3>
+            </div>
+            <div class="propiedades__contenido">
+              <p class="propiedades__texto">Elegante y espaciosa casa con jardín zen y acabados de mármol. Habitaciones
+                con baño en suite, sala de cine, gimnasio y
+                cocina gourmet con isla central comodo con gran espacio.
+              </p>
+              <p class="propiedades__precio">$1,200,000.00</p>
+              <a class="propiedades__enlace" href="#">Ver Propiedad</a>
+            </div>
+          </div>
+
+          <div class="propiedades__propiedad">
+            <div class="propiedades__imagen">
+              <h3 class="propiedades__nombre">Casa de Lujo con 3 Cuartos</h3>
+            </div>
+            <div class="propiedades__contenido">
+              <p class="propiedades__texto">Gran residencia elegante con arquitectura contemporánea y paneles solares.
+                Cuenta
+                con
+                biblioteca, oficina, patio con fuente, y amplio
+                salón para eventos sociales muy elegantes.
+              </p>
+              <p class="propiedades__precio">$1,200,000.00</p>
+              <a class="propiedades__enlace" href="#">Ver Propiedad</a>
+            </div>
+          </div>
+
+          <div class="propiedades__propiedad">
+            <div class="propiedades__imagen">
+              <h3 class="propiedades__nombre">Casa de Lujo con 3 Cuartos</h3>
+            </div>
+            <div class="propiedades__contenido">
+              <p class="propiedades__texto">Villa de diseño exclusivo con acabados de lujo y sistema de seguridad
+                avanzado. Ofrece un spa privado, bodega de vinos,
+                y un loft independiente para invitados muy elegantes.
+              </p>
+              <p class="propiedades__precio">$1,200,000.00</p>
+              <a class="propiedades__enlace" href="#">Ver Propiedad</a>
+            </div>
+          </div>
+        </div>
+      </section>
+    </div>
+  </main>
 </body>
 </html>
