[ADD] agregar estructura para seccion de destacadas

--- a/index.html
+++ b/index.html
@@ -140,5 +140,20 @@
       </section>
     </div>
   </main>
+
+  <section class="destacada">
+    <div class="destacada__container destacada__all">
+      <div class="destacada__grid">
+        <div class="destacada__content">
+          <h2 class="destacada__titulo">propiedad destacada </h2>
+          <div class="destacada__texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel quisquam amet
+            voluptas fugiat nulla optio facilis qui a sed nobis, distinctio tempora quidem minima laudantium!
+            Architecto impedit fuga explicabo est!</div>
+          <div class="destacada__precio">$12,000,000</div>
+          <a href="#" class="destacada__botom">ver propiedad</a>
+        </div>
+      </div>
+    </div>
+  </section>
 </body>
 </html>
