[ADD] agregar estructura para seccion de testimoniales-blog

--- a/index.html
+++ b/index.html
@@ -155,5 +155,86 @@
       </div>
     </div>
   </section>
+
+  <div class="testimoniales-blog">
+    <div class="testimoniales-log__container">
+      <div class="testimoniales-blog__grid">
+
+        <section class="testimoniales">
+          <h2 class="testimoniales__titulo">Que dicen <span>Nuestros Clientes</span>
+          </h2>
+
+          <div class="testimoniales__testimonial">
+            <picture>
+              <source srcset="./build/img/testimonial.avif" type="image/avif">
+              <source srcset="./build/img/testimonial.webp" type="image/webp">
+              <img class="testimoniales__img" src="./build/img/testimonial.jpg" alt="familia" loading="lazy" width="300"
+                height="300">
+            </picture>
+
+            <div class="testimoniales__content">
+              <p class="testimoniales__nombre">Familia Hernadez</p>
+              <p class="testimoniales__texto">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Veniam minima
+                praesentium placeat quod, ipsum beatae provident voluptatum corrupti debitis deleniti. </p>
+            </div>
+          </div>
+        </section>
+
+        <section class="blog">
+          <h2 class="blog__titulo">Ultimas entradas <span>de nuestro Blog</span></h2>
+
+          <div class="blog__grid">
+            <div class="blog__entrada">
+              <picture>
+                <source srcset="./build/img/blog_1.avif" type="image/avif">
+                <source srcset="./build/img/blog_1.webp" type="image/webp">
+                <img class="blog__img" src="./build/img/blog_1.jpg" alt="entrada 1" loading="lazy" width="300"
+                  height="300">
+              </picture>
+
+              <div class="blog__content">
+                <h3 class="blog__subtitulo">Titulo aqui</h3>
+                <p class="blog__meta">Publicado por bienes raices el 10 de agosto de 2025</p>
+                <p class="blog__texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe, animi.</p>
+                <a href="#" class="blog__boton">Leer artículo</a>
+              </div>
+            </div>
+
+            <div class="blog__entrada">
+              <picture>
+                <source srcset="./build/img/blog_2.avif" type="image/avif">
+                <source srcset="./build/img/blog_2.webp" type="image/webp">
+                <img class="blog__img" src="./build/img/blog_2.jpg" alt="entrada 2" loading="lazy" width="300"
+                  height="300">
+              </picture>
+
+              <div class="blog__content">
+                <h3 class="blog__subtitulo">Titulo aqui</h3>
+                <p class="blog__meta">Publicado por bienes raices el 10 de agosto de 2025</p>
+                <p class="blog__texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe, animi.</p>
+                <a href="#" class="blog__boton">Leer artículo</a>
+              </div>
+            </div>
+
+            <div class="blog__entrada">
+              <picture>
+                <source srcset="./build/img/blog_3.avif" type="image/avif">
+                <source srcset="./build/img/blog_3.webp" type="image/webp">
+                <img class="blog__img" src="./build/img/blog_3.jpg" alt="entrada 3" loading="lazy" width="300"
+                  height="300">
+              </picture>
+
+              <div class="blog__content">
+                <h3 class="blog__subtitulo">Titulo aqui</h3>
+                <p class="blog__meta">Publicado por bienes raices el 10 de agosto de 2025</p>
+                <p class="blog__texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe, animi.</p>
+                <a href="#" class="blog__boton">Leer artículo</a>
+              </div>
+            </div>
+          </div>
+        </section>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
