--- a/index.html
+++ b/index.html
@@ -236,5 +236,38 @@
       </div>
     </div>
   </div>
+
+  <footer class="footer">
+    <div class="footer__container">
+      <div class="footer__grid">
+        <div class="footer__box">
+          <h3 class="footer__heading">Navegación</h3>
+          <nav class="header__menu footer__menu">
+            <a class="header__link footer__link-vertical" href="#">Nosotros</a>
+            <a class="header__link footer__link-vertical" href="#">Propiedades</a>
+            <a class="header__link footer__link-vertical" href="#">Blog</a>
+            <a class="header__link footer__link-vertical" href="#">Testimoniales</a>
+            <a class="header__link footer__link-vertical" href="#">Contacto</a>
+          </nav>
+        </div>
+
+        <div class="footer__box">
+          <h3 class="footer__heading">Nosotros</h3>
+          <p class="footer__texto">
+            Lorem ipsum dolor sit amet consectetur adipiscing elit. Pariatur dolore quo tempore! Atque porro quibusdam
+            voluptas
+            nisi corrupti. Unde, ipsam vel deleniti magnam nulla nemo suscipit sunt porro blanditiis? Nemo.
+          </p>
+        </div>
+
+        <div class="footer__box">
+          <img class="footer__img" src="./build/img/logo.svg" alt="imagen logo" loading="lazy" width="300" height="300">
+        </div>
+      </div>
+    </div>
+
+    <p class="footer__copyright">Todos los Derechos Reservados Real State &copy;</p>
+  </footer>
+
 </body>
 </html>
