[FIX] corregir ruta de imagen flotante en header

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           diseño convergen para crear no
           solo una casa, sino un refugio personal que anticipa y satisface cada una de tus necesidades.</p>
         <picture>
-          <source srcset="../build/img/imagenHeader.avif" type="image/avif">
+          <source srcset="./build/img/imagenHeader.avif" type="image/avif">
           <source srcset="./build/img/imagenHeader.webp" type="image/webp">
           <img class="header__img-flotante" src="./build/img/imagenHeader.jpg" alt="imagen de hogar" loading="lazy"
             width="300" height="300">
