[UPDATE] actualizar etiquetas meta

--- a/index.html
+++ b/index.html
@@ -24,11 +24,13 @@
   <meta name="theme-color" content="#ffffff">
   <!-- Meta   -->
   <meta name="robots" content="index, follow">
-  <meta property="og:title" content="-----">
-  <meta property="og:image" content="-----">
-  <meta property="og:url" content="------">
-  <meta property="og:description" content="------">
-  <meta name="description" content="------">
+  <meta property="og:title" content="RealState">
+  <meta property="og:image" content="https://i.postimg.cc/FssZjjvQ/Real-State.png">
+  <meta property="og:url" content="https://jmatochepacual.github.io/RealState">
+  <meta property="og:description"
+    content="Descubre propiedades exclusivas con RealState. Encuentra casas de lujo que fusionan confort y diseño, ubicadas en las zonas más prestigiosas. Explora nuestra selección y halla el hogar de tus sueños.">
+  <meta name="description"
+    content="RealState ofrece una colección curada de propiedades de lujo, diseñadas para el comprador moderno. Navega por casas exclusivas con comodidades de primera clase y encuentra tu próximo hogar perfecto.">
   <!-- Css  -->
   <link rel="stylesheet" href="./build/css/app.css">
 </head>
