--- a/index.html
+++ b/index.html
@@ -1,32 +1,33 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>RealState</title>
   <!-- Favicon   -->
-  <link rel="apple-touch-icon" sizes="57x57" href="./favicon/apple-icon-57x57.png">
-  <link rel="apple-touch-icon" sizes="60x60" href="./favicon/apple-icon-60x60.png">
-  <link rel="apple-touch-icon" sizes="72x72" href="./favicon/apple-icon-72x72.png">
-  <link rel="apple-touch-icon" sizes="76x76" href="./favicon/apple-icon-76x76.png">
-  <link rel="apple-touch-icon" sizes="114x114" href="./favicon/apple-icon-114x114.png">
-  <link rel="apple-touch-icon" sizes="120x120" href="./favicon/apple-icon-120x120.png">
-  <link rel="apple-touch-icon" sizes="144x144" href="./favicon/apple-icon-144x144.png">
-  <link rel="apple-touch-icon" sizes="152x152" href="./favicon/apple-icon-152x152.png">
-  <link rel="apple-touch-icon" sizes="180x180" href="./favicon/apple-icon-180x180.png">
-  <link rel="icon" type="image/png" sizes="192x192" href="./favicon/android-icon-192x192.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="./favicon/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="96x96" href="./favicon/favicon-96x96.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="./favicon/favicon-16x16.png">
-  <link rel="manifest" href="./favicon/manifest.json">
+  <link rel="apple-touch-icon" sizes="57x57" href="./src/favicon/apple-icon-57x57.png">
+  <link rel="apple-touch-icon" sizes="60x60" href="./src/favicon/apple-icon-60x60.png">
+  <link rel="apple-touch-icon" sizes="72x72" href="./src/favicon/apple-icon-72x72.png">
+  <link rel="apple-touch-icon" sizes="76x76" href="./src/favicon/apple-icon-76x76.png">
+  <link rel="apple-touch-icon" sizes="114x114" href="./src/favicon/apple-icon-114x114.png">
+  <link rel="apple-touch-icon" sizes="120x120" href="./src/favicon/apple-icon-120x120.png">
+  <link rel="apple-touch-icon" sizes="144x144" href="./src/favicon/apple-icon-144x144.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="./src/favicon/apple-icon-152x152.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="./src/favicon/apple-icon-180x180.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="./src/favicon/android-icon-192x192.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="./src/favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="96x96" href="./src/favicon/favicon-96x96.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="./src/favicon/favicon-16x16.png">
+  <link rel="manifest" href="./src/favicon/manifest.json">
   <meta name="msapplication-TileColor" content="#ffffff">
-  <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+  <meta name="msapplication-TileImage" content="./src/favicon/ms-icon-144x144.png">
   <meta name="theme-color" content="#ffffff">
   <!-- Meta   -->
   <meta name="robots" content="index, follow">
   <meta property="og:title" content="RealState">
-  <meta property="og:image" content="https://i.postimg.cc/FssZjjvQ/Real-State.png">
-  <meta property="og:url" content="https://jmatochepacual.github.io/RealState">
+  <meta property="og:image" content="https://jmatochepascual.github.io/RealState/build/img/RealState-tag.avif">
+  <meta property="og:url" content="https://jmatochepascual.github.io/RealState/">
   <meta property="og:description"
     content="Descubre propiedades exclusivas con RealState. Encuentra casas de lujo que fusionan confort y diseño, ubicadas en las zonas más prestigiosas. Explora nuestra selección y halla el hogar de tus sueños.">
   <meta name="description"
@@ -34,6 +35,7 @@
   <!-- Css  -->
   <link rel="stylesheet" href="./build/css/app.css">
 </head>
+
 <body>
   <header class="header">
     <div class="header__container">
@@ -289,4 +291,5 @@
   </footer>
 
 </body>
+
 </html>
